--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,11 +22,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+  <script src="./mpld3.v0.5.10-dev.js"></script>
+
   <title>Modle: The ML Guessing Game</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+
   <div id="root"></div>
   <!--
       This HTML file is a template.
