Move mpld3 importer to utils file

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="./mpld3.v0.5.10-dev.js"></script>
+  <script>
+
+  </script>
 
   <title>Modle: The ML Guessing Game</title>
 </head>
