Get graph to appear

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,11 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <script src="./mpld3.v0.5.10-dev.js"></script>
-  <script>
-
-  </script>
+  <script src="https://d3js.org/d3.v5.js"></script>
+  <script src="https://mpld3.github.io/js/mpld3.v0.5.8.js"></script>
 
   <title>Modle: The ML Guessing Game</title>
 </head>
